--- a/src/style/_createNewParty.scss
+++ b/src/style/_createNewParty.scss
@@ -40,7 +40,7 @@
       box-sizing: border-box;
     }
 
-    textarea {
+    .invitationText {
       min-height: 140px;
       resize: vertical;
     }
